--- a/Ud10/Unidad10SGE/Ejercicio01/Ejercicio01.csproj
+++ b/Ud10/Unidad10SGE/Ejercicio01/Ejercicio01.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\Entidades\Entidades.csproj" />
+  </ItemGroup>
+
 </Project>
