--- a/Ud10/Unidad10SGE/ConexionMaui/ConexionMaui.csproj
+++ b/Ud10/Unidad10SGE/ConexionMaui/ConexionMaui.csproj
@@ -63,6 +63,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\BL\BL.csproj" />
 	  <ProjectReference Include="..\DAL\DAL.csproj" />
 	</ItemGroup>
 
